@@ -4,7 +4,7 @@
 
     <groupId>alien4cloud</groupId>
     <artifactId>alien4cloud-provider-int-test</artifactId>
-    <version>1.1.0-SM9-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
 
     <name>Provider end to end integration tests</name>
 
@@ -170,6 +170,34 @@
                             </deployables>
                         </configuration>
                     </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>2.16</version>
+                        <configuration>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                    <goal>verify</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+       <profile>
+            <id>do-test-remote</id>
+            <activation>
+                <property>
+                    <name>doTestRemote</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
